Tests/Lite/ScopeCheck/bad-scope.silt
-- RUN: --verify scopes

module bad-scope where

id : forall {A : Type} -> A -> A
id x = y -- expected-error {{Use of undeclared identifier 'y'}}

id : forall {A : Type} -> A -> A -- expected-error {{cannot shadow name 'id'}}
id x = x

typo : forall {A : Typo} -> A -> A -- expected-error {{Use of undeclared identifier 'Typo'}}
typo x = x

typo2 : forall {A : Type} -> A -> B -- expected-error {{Use of undeclared identifier 'B'}}
typo2 x = x

apply-missing-var : forall {A B : Type}{x : A}{f : A -> Type} -> f x -> f y -- expected-error {{Use of undeclared identifier 'y'}}
apply-missing-var x = x

body-before-sig x = x -- expected-error {{function body for 'body-before-sig' must appear after function type signature}}

